# wallcraft

./: .gitignore  electron.vite.config.ts  index.html  package-lock.json  package.json  prd.md  tailwind.config.js  tsconfig.json  tsconfig.node.json  tsconfig.web.json  vite.config.ts
.github/workflows/: build-macos.yml
src/: App.tsx
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  scheduler.rs  screens.rs  settings.rs  wallpaper.rs
src/components/: ApiKeySetup.tsx  Gallery.tsx  PhotoCard.tsx  PreviewModal.tsx  SearchBar.tsx  Settings.tsx  Sidebar.tsx  Toast.tsx
src/main/: index.ts  scheduler.ts  screens.ts  settings.ts  wallpaper.ts
src/preload/: index.ts
src/renderer/: index.html
src/renderer/src/: App.tsx
src/renderer/src/components/: ApiKeySetup.tsx  Gallery.tsx  PhotoCard.tsx  PreviewModal.tsx  Settings.tsx  Sidebar.tsx  Toast.tsx
src/renderer/src/services/: unsplash.ts
src/renderer/src/store/: useStore.ts
src/renderer/src/types/: global.d.ts
src/services/: unsplash.ts
src/shared/: types.ts
src/store/: useStore.ts
src/styles/: index.css
src/types/: index.ts
