[package]
name = "wallcraft"
version = "1.0.0"
edition = "2021"

[lib]
name = "wallcraft_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = ["NSWorkspace", "NSScreen"] }
objc2-foundation = { version = "0.2", features = ["NSURL", "NSDictionary", "NSError", "NSArray", "NSString"] }
